# demo

./: CMakeLists.txt
cmake/: CXXHelper.cmake  GroupByFolder.cmake
source/: CMakeLists.txt  algorithm.cc  algorithm.h  interface.cc  interface.h  main.cc  navigation.ui  niuke.cc  niuke.h  tableDeal.ui
